new notes routes
